Add swagger-codegen-maven-plugin
