# frontend/src/main/frontend/swagger-v1.json
@@ -42,7 +42,7 @@
           "Categories"
         ],
         "summary": "Find all categories",
-        "operationId": "getCategoriesUsingGET",
+        "operationId": "getCategories",
         "consumes": [
           "application/json"
         ],
@@ -77,7 +77,7 @@
           "Categories"
         ],
         "summary": "Find a category by ID",
-        "operationId": "getCategoryUsingGET",
+        "operationId": "getCategoryById",
         "consumes": [
           "application/json"
         ],
@@ -119,7 +119,7 @@
           "Questionnaires"
         ],
         "summary": "Find all questionnaires",
-        "operationId": "getQuestionnairesUsingGET",
+        "operationId": "getQuestionnaires",
         "consumes": [
           "application/json"
         ],
@@ -154,7 +154,7 @@
           "Questionnaires"
         ],
         "summary": "upload a questionnaire json file",
-        "operationId": "uploadQuestionFileUsingPOST",
+        "operationId": "uploadFile",
         "consumes": [
           "multipart/form-data"
         ],
@@ -198,7 +198,7 @@
           "Questions"
         ],
         "summary": "Find all questions",
-        "operationId": "getQuestionsUsingGET",
+        "operationId": "getQuestionByQuestionnaireIDAndCategorieId",
         "consumes": [
           "application/json"
         ],
@@ -249,7 +249,7 @@
           "Questions"
         ],
         "summary": "Save a question",
-        "operationId": "saveQuestionUsingPOST",
+        "operationId": "saveQuestion",
         "consumes": [
           "application/json"
         ],
@@ -293,7 +293,7 @@
           "Questions"
         ],
         "summary": "Update a question",
-        "operationId": "updateQuestionUsingPUT",
+        "operationId": "updateQuestion",
         "consumes": [
           "application/json"
         ],
@@ -339,7 +339,7 @@
           "Questions"
         ],
         "summary": "Find a question by ID",
-        "operationId": "getQuestionUsingGET",
+        "operationId": "getQuestionById",
         "consumes": [
           "application/json"
         ],
@@ -381,7 +381,7 @@
           "Users"
         ],
         "summary": "get Current user",
-        "operationId": "userUsingGET",
+        "operationId": "getCurrentUser",
         "consumes": [
           "application/json"
         ],
@@ -430,7 +430,7 @@
     "Iterable«Category»": {
       "type": "object"
     },
-    "Iterable«QuestionnaireDto»": {
+    "Iterable«Questionnaire»": {
       "type": "object"
     },
     "Iterable«Question»": {
@@ -471,24 +471,6 @@
       }
     },
     "Questionnaire": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "name": {
-          "type": "string"
-        },
-        "questions": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Question"
-          }
-        }
-      }
-    },
-    "QuestionnaireDto": {
       "type": "object",
       "properties": {
         "id": {
